crates/yajlir/src/tree/snapshots/yajl__tree__tests__handle_boolean_works-0.snap
---
source: crates/yajl/src/tree/tests.rs
expression: ctx
snapshot_kind: text
---
Context {
    stack: "NULL",
    root: Value::False,
    errbuf: "NULL",
    errbuf_size: 0,
}
