crates/yajlir/src/tree/snapshots/yajl__tree__tests__handle_start_and_end_map_works-4.snap
---
source: crates/yajl/src/tree/tests.rs
expression: ctx
snapshot_kind: text
---
Context {
    stack: "NULL",
    root: Value::Object({"key": Value::True}),
    errbuf: "NULL",
    errbuf_size: 0,
}
